// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayFileCard should render a ClayFileCard with actionItems 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="My Title actions" type="button">
            <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with actionItems and actionAriaLabel 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle actions" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="My Title actions" type="button">
            <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with classes 1`] = `
<div class="card-type-asset card file-card my-custom-class">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with href 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <a class=" card-title text-truncate" href="#1">My Title</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with icon 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with id 1`] = `
<div class="card-type-asset card file-card" id="myId">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`danger color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-danger">
            <span class="label-item label-item-expand">Approved</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`info color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-info">
            <span class="label-item label-item-expand">Approved</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`secondary color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Approved</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`success color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-success">
            <span class="label-item label-item-expand">Approved</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labelStyle \`warning color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-warning">
            <span class="label-item label-item-expand">Approved</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with labels with styles mapped with labelStylesMap 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-success">
            <span class="label-item label-item-expand">Approved</span>
          </span>
          <span class="label label-warning">
            <span class="label-item label-item-expand">Pending</span>
          </span>
          <span class="label label-danger">
            <span class="label-item label-item-expand">Error</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with one label 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Approved</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker shape \`circle\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-circle sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker shape \`rounded\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`danger color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-danger sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`dark color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-dark sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`info color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-info sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`light color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-light sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`primary color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`secondary color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-secondary sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`success color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-success sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker style \`warning color\` 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-warning sticker-bottom-left">
      <span class="sticker-overlay">DOC</span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker with icon 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-primary sticker-bottom-left">
      <span class="inline-item">
        <svg class="lexicon-icon lexicon-icon-documents" focusable="false" role="presentation">
          <use xlink:href="icons.svg#documents"></use>
        </svg>
      </span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with sticker with image 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
    <span class="sticker sticker-rounded sticker-primary sticker-bottom-left">
      <span class="sticker-overlay">
        <img alt="my image" class="sticker-img" src="./image.jpg">
      </span>
    </span>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with subtitle 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-subtitle text-truncate">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with two labels 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Approved</span>
          </span>
          <span class="label label-secondary">
            <span class="label-item label-item-expand">Pending</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a ClayFileCard with two labels with styles 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
        <div class="card-detail">
          <span class="label label-warning">
            <span class="label-item label-item-expand">Approved</span>
          </span>
          <span class="label label-danger">
            <span class="label-item label-item-expand">Pending</span>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable ClayFileCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable ClayFileCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable ClayFileCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" value="checkbox" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable disabled ClayFileCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render a selectable selected ClayFileCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left file-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
              <use xlink:href="icons.svg#documents-and-media"></use>
            </svg>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">My Title</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayFileCard should render the default markup 1`] = `
<div class="card-type-asset card file-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <svg class="lexicon-icon lexicon-icon-documents-and-media" focusable="false" role="presentation">
        <use xlink:href="icons.svg#documents-and-media"></use>
      </svg>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">My Title</div>
      </div>
    </div>
  </div>
</div>
`;
